[DSR-109] Fixing docs hamburger alignment on mobile (#54)
* Refactoring the global header
* Switching Docs Site breakpoints to Thorium breakpoints
* Removing padding from global header

--- a/docs/assets/scss/_navigation.scss
+++ b/docs/assets/scss/_navigation.scss
@@ -64,12 +64,10 @@ Description:  Left-hand navigation styles
   }
 }
 
-@media screen and (max-width: 960px) {
-  .menu-active {
-    article {
-      opacity: 1;
-      -webkit-transform: translateX(200px);
-      transform: translateX(200px);
-    }
+.menu-active {
+  article {
+    opacity: 1;
+    -webkit-transform: translateX(200px);
+    transform: translateX(200px);
   }
 }
